# rtaw_gat_multirobot

./: CMakeLists.txt  README.md
cmake_modules/: FindGlog.cmake
data/layout/double_single/100_l_x60_w_x25_wa_x20_c_x20_s/: line_data.txt  map.txt  point_data.txt  zone_data.txt
data/layout/double_single/100_l_x70_w_x25_wa_x20_c_x20_s/: line_data.txt  map.txt  point_data.txt  zone_data.txt
data/layout/double_single/60_l_x40_w_x12_wa_x10_c_x10_s/: line_data.txt  map.txt  point_data.txt  zone_data.txt
data/layout/double_single/60_l_x50_w_x12_wa_x10_c_x10_s/: line_data.txt  map.txt  point_data.txt  zone_data.txt
data/layout/real_factory/s_tech/: line_data.txt  map.txt  point_data.txt
data/layout/single/100x50/: init_vertex_ids.txt  line_data.txt  map.txt  point_data.txt  zone_data.txt
data/layout/single/50x50/: init_vertex_ids.txt  line_data.txt  map.txt  point_data.txt  zone_data.txt
data/layout/single/60x30/: init_vertex_ids.txt  line_data.txt  point_data.txt  task_ids.txt  zone_data.txt
data/original_model/gnn_allocation/: gnn_allocation_policy_gpu_ver1.pth  gnn_allocation_policy_gpu_ver2.pth  gnn_allocation_policy_gpu_ver3.pth
data/original_model/gnn_allocation/sac_model/: actor_model.pth  critic_model1.pth  critic_model2.pth
data/original_model/rtaw/: rtaw_policy13.pth  rtaw_policy25.pth  rtaw_policy4.pth  rtaw_policy54.pth  rtaw_policy6.pth  rtaw_policy63.pth  rtaw_policy66.pth  rtaw_policy90.pth  rtaw_policy92.pth  rtaw_policy93.pth
data/statistics/: visual_reward.py
data/statistics/gnn_single/50x50/train_1/: best_average_time.txt  logger.csv  (+2 more)
include/allocation/: astar_allocation.h  gnn_allocation.h  rtaw_allocation.h  task_generator.h
include/env/: double_single_environment.h  double_single_reconstruct.h  environment_interface.h  real_environment.h  real_reconstruct.h  reconstruct_interface.h  single_environment.h  single_reconstruct.h
include/planner/: astar_planner.h  planner_interface.h
include/policy/: buffers.h  categorical.h  gnn_allocation_policy.h  rtaw_policy.h  sac_buffers.h
include/robot/: robot.h
include/utils/: map_and_graph.h  type_and_state.h  type_define.h  utils.h
src/: astar_allocation_test.cpp  gnn_allocation_test.cpp  gnn_allocation_train.cpp  main.cpp  rtaw_allocation_test.cpp  rtaw_allocation_train.cpp  sac_gnn_allocation_train.cpp
src/allocation/: astar_allocation.cpp  gnn_allocation.cpp  rtaw_allocation.cpp  task_generator.cpp
src/env/: double_single_reconstruct.cpp  real_environment.cpp  real_reconstruct.cpp  single_environment.cpp  single_reconstruct.cpp
src/planner/: astar_planner.cpp
src/policy/: buffers.cpp  categorical.cpp  sac_buffers.cpp
src/robot/: robot.cpp
src/utils/: map_and_graph.cpp  utils.cpp
(+44 files in other folders)
